<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="8dp" >

    <TextView
            android:id="@+id/drinkName"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/getraenk"
            android:textSize="18sp"
            android:padding="4dp" />

    <TextView
            android:id="@+id/field1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/f"
            android:textSize="18sp"
            android:padding="4dp" />

    <TextView
            android:id="@+id/field2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/d"
            android:textSize="18sp"
            android:padding="4dp" />

    <TextView
            android:id="@+id/field3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/n"
            android:textSize="18sp"
            android:padding="4dp" />

    <TextView
            android:id="@+id/averageDrink"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/durchschnitt"
            android:textSize="18sp"
            android:padding="4dp"
            android:visibility="gone" />

</LinearLayout>
